preventing scrollbar during animation

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   background-size: cover;
   height: 100vh;
   margin: 0;
+  overflow: hidden;
 }
 main {
   display: flex;
